# nlm-system

./: .gitignore  AGENT_ARCHITECTURE_IMPLEMENTATION_PLAN.md  CLAUDE.md  EXPERIMENT_RESULTS.md  GITHUB_SETUP.md  README.md  agent_base.py  agent_examples.py  conversation_history.py  history_viewer.py  main.py  multi_agent_system.py  nlm_interpreter.py  pyproject.toml  setup_openai.py  test_120b_integration.py  test_agent_basic.py  test_agent_examples.py  test_multi_agent_system.py  test_role_continuation.py  variable_db.py  watch_variables.py
blind_opt/: README.md  optimization_agent.py  optimizer.py  test_functions.py
card-game/: README.md  card_game_agent.py  game_orchestrator.py  rule.md  strategy_test.py  test_history.py  test_simple_game.py
dice-game/: README.md  dice_game_agent.py  dice_orchestrator.py  game_rules.md
docs/: README.md  api_reference.md  detailed_documentation.md  edge_case_testing_report.md  multi_agent_guide.md  multi_agent_user_guide.md  prompt_standards.md  prompt_writing_standards.md  user_guide.md
examples/: basic_usage.md  demo_script.py
flow_control/: README.md  flow_operations.py  interactive_monitor.py  maxflow_calculator.py  network_display.py  network_file_loader.py  network_generators.py  network_model.py  network_samples.py  network_visualizer.py  path_enumerator.py
macros/: haiku_generation.md
multi_haiku/: README.md  haiku_generator_agent.py  haiku_selector_agent.py  simple_orchestrator.py  theme_generator_agent.py
packet-game/: README.md  future_extensions_plan.md  implementation.md  llm_direct_scheduler.py  packet.py  (+1 more)
(+135 files in other folders)
